<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menus.zakat.MenuZakatActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_menu_zakat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
            app:title="@string/text_menu_zakat"
            app:titleTextAppearance="@style/ToolbarAppeareance"
            app:titleTextColor="@color/colorWhite"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_header_zakat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_menu_zakat"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_zakat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:background="@drawable/bg_rounded_zakat"
            android:padding="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_dashboard">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_amount_harta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/text_total_harta"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="@id/container_zakat"
                app:layout_constraintTop_toTopOf="@id/container_zakat"/>


            <com.cottacush.android.currencyedittext.CurrencyEditText
                android:id="@+id/et_amount_zakat"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bg_rounded_edit_text"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                app:currencySymbol="Rp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_amount_harta"
                app:localeTag="id-ID"
                app:useCurrencySymbolAsHint="true"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_zakat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_rounded_button"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/text_ok"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_amount_zakat"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_zakat_total"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/bg_rounded_zakat_total"
            android:padding="16dp"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            app:layout_constraintEnd_toStartOf="@+id/container_zakat_cost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_zakat"
            android:layout_marginLeft="24dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_harta_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/text_total_harta"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/tv_harta_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_harta_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/text_rp_0"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_zakat_cost"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_rounded_zakat_cost"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/container_zakat_total"
            app:layout_constraintTop_toBottomOf="@+id/container_zakat">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_zakat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/text_zakat_keluar"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@id/tv_amount_zakat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_amount_zakat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/text_rp_0"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

